@@ -1,6 +1,6 @@
-// Character Traits for use by standard string and iostream
+// Character Traits for use by standard string and iostream -*- C++ -*-
 
-// Copyright (C) 1997-1999 Free Software Foundation, Inc.
+// Copyright (C) 1997-1999, 2000 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -79,9 +79,9 @@ namespace std {
       { return __c1 < __c2; }
 
       static int 
-      compare(const char_type* __s1, const char_type* __s2, int_type __n)
+      compare(const char_type* __s1, const char_type* __s2, size_t __n)
       { 
-	for (int_type __i = 0; __i < __n; ++__i)
+	for (size_t __i = 0; __i < __n; ++__i)
 	  if (!eq(__s1[__i],__s2[__i]))
 	    return lt(__s1[__i],__s2[__i]) ? -1 : 1;
 	return 0; 
@@ -96,25 +96,25 @@ namespace std {
       }
 
       static const char_type* 
-      find(const char_type* __s, int __n, const char_type& __a)
+      find(const char_type* __s, size_t __n, const char_type& __a)
       { 
-	for (const char_type* __p = __s; __p < __s+__n; ++__p)
+	for (const char_type* __p = __s; size_t(__p - __s) < __n; ++__p)
 	  if (*__p == __a) return __p;
 	return 0;
       }
 
       static char_type* 
-      move(char_type* __s1, const char_type* __s2, int_type __n)
+      move(char_type* __s1, const char_type* __s2, size_t __n)
       { return (char_type*) memmove(__s1, __s2, __n * sizeof(char_type)); }
 
       static char_type* 
-      copy(char_type* __s1, const char_type* __s2, int_type __n)
+      copy(char_type* __s1, const char_type* __s2, size_t __n)
       { return (char_type*) memcpy(__s1, __s2, __n * sizeof(char_type)); }
 
       static char_type* 
-      assign(char_type* __s, int_type __n, char_type __a)
+      assign(char_type* __s, size_t __n, char_type __a)
       { 
-	for (char_type* __p = __s; __p - __s < __n; ++__p) 
+	for (char_type* __p = __s; __p < __s + __n; ++__p) 
 	  assign(*__p, __a);
         return __s; 
       }
@@ -167,7 +167,7 @@ namespace std {
       { return __c1 < __c2; }
 
       static int 
-      compare(const char_type* __s1, const char_type* __s2, int_type __n)
+      compare(const char_type* __s1, const char_type* __s2, size_t __n)
       { return memcmp(__s1, __s2, __n); }
 
       static size_t
@@ -175,19 +175,19 @@ namespace std {
       { return strlen(__s); }
 
       static const char_type* 
-      find(const char_type* __s, int __n, const char_type& __a)
+      find(const char_type* __s, size_t __n, const char_type& __a)
       { return static_cast<char*>(memchr(__s, __a, __n)); }
 
       static char_type* 
-      move(char_type* __s1, const char_type* __s2, int_type __n)
+      move(char_type* __s1, const char_type* __s2, size_t __n)
       { return static_cast<char*>(memmove(__s1, __s2, __n)); }
 
       static char_type* 
-      copy(char_type* __s1, const char_type* __s2, int_type __n)
+      copy(char_type* __s1, const char_type* __s2, size_t __n)
       {  return static_cast<char*>(memcpy(__s1, __s2, __n)); }
 
       static char_type* 
-      assign(char_type* __s, int_type __n, char_type __a)
+      assign(char_type* __s, size_t __n, char_type __a)
       { return static_cast<char*>(memset(__s, __a, __n)); }
 
       static char_type 
@@ -232,15 +232,17 @@ namespace std {
       static void 
       assign(char_type& __c1, const char_type& __c2)
       { __c1 = __c2; }
+
       static bool 
       eq(const char_type& __c1, const char_type& __c2)
       { return __c1 == __c2; }
+
       static bool 
       lt(const char_type& __c1, const char_type& __c2)
       { return __c1 < __c2; }
 
       static int 
-      compare(const char_type* __s1, const char_type* __s2, int_type __n)
+      compare(const char_type* __s1, const char_type* __s2, size_t __n)
       { 
 	for (int_type __i = 0; __i < __n; ++__i)
 	  if (!eq(__s1[__i], __s2[__i]))
@@ -258,9 +260,9 @@ namespace std {
       }
 
       static const char_type* 
-      find (const char_type* __s, int __n, const char_type& __a)
+      find(const char_type* __s, size_t __n, const char_type& __a)
       { 
-	for (const char_type* __p = __s; __p < __s+__n; ++__p)
+	for (const char_type* __p = __s; size_t(__p - __s) < __n; ++__p)
 	  if (*__p == __a) 
 	    return __p;
 	return 0;
@@ -272,12 +274,12 @@ namespace std {
 					     __n * sizeof(wchar_t))); }
 
       static char_type* 
-      copy(char_type* __s1, const char_type* __s2, int_type __n)
+      copy(char_type* __s1, const char_type* __s2, size_t __n)
       { return static_cast<wchar_t*>(memcpy(__s1, __s2, 
 					    __n * sizeof(wchar_t))); }
 
       static char_type* 
-      assign(char_type* __s, int_type __n, char_type __a)
+      assign(char_type* __s, size_t __n, char_type __a)
       { 
 	for (char_type* __p = __s; __p < __s + __n; ++__p) 
 	  assign(*__p, __a);
@@ -323,5 +325,4 @@ namespace std {
 
 
 #endif /* _CPP_BITS_CHAR_TRAITS_H */
-
 
